crates/quiver/tests/compile_fail/conflicting_exhaustiveness.rs
//! `exhaustive` and `nonexhaustive` conflict.

use quiver::arrow::array::StringArray;

#[derive(quiver::Quiver)]
#[quiver(exhaustive, nonexhaustive)]
struct Thing {
    name: StringArray,
}

fn main() {}
